--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       uses: docker://ghcr.io/michal-h21/make4ht-action:latest
       env:
         command: |
-          set -e                        # stop the script on the first error
+          set -e                       
           apt-get update -qq && \
           apt-get install -y --no-install-recommends  && \ 
               wget curl libnet-ssleay-perl libio-socket-ssl-perl \
