--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,56 +1,36 @@
 name: CI
-
-# ------------------------------------------------------------------
-# Trigger
-# ------------------------------------------------------------------
 on: [push]
 
-# ------------------------------------------------------------------
-# GitHub-Pages needs the write permission
-# ------------------------------------------------------------------
 permissions:
-  contents: write        # required by peaceiris/actions-gh-pages
+  contents: write
 
-# ------------------------------------------------------------------
-# Job
-# ------------------------------------------------------------------
 jobs:
-  build:
+  build-and-publish:
     runs-on: ubuntu-latest
+    container:               # use Michal Hrušecký’s image
+      image: ghcr.io/michal-h21/make4ht-action:latest
 
     steps:
-    #---------------------------------------------------------------
-    # 1. check out the repository
-    #---------------------------------------------------------------
-    - uses: actions/checkout@v4       # v4 is the current LTS
+      - uses: actions/checkout@v4
 
-    #---------------------------------------------------------------
-    # 2. run make4ht inside the dedicated container
-    #    (all commands are passed through the `command`
-    #     environment variable that the action executes with /bin/sh)
-    #---------------------------------------------------------------
-    - name: Build HTML with make4ht
-      uses: docker://ghcr.io/michal-h21/make4ht-action:latest
-      env:
-        command: |
-          set -e                       
-          apt-get update -qq && \
-          apt-get install -y --no-install-recommends  && \ 
-              wget curl libnet-ssleay-perl libio-socket-ssl-perl \
-              xz-utils ghostscript imagemagick && \
-          tlmgr init-usertree && \
+      - name: Build HTML with make4ht
+        shell: bash          # so the pipes and back-slashes work
+        run: |
+          set -e
+          apt-get update -qq
+          apt-get install -y --no-install-recommends \
+            wget curl libnet-ssleay-perl libio-socket-ssl-perl \
+            xz-utils ghostscript imagemagick
+          tlmgr init-usertree
           tlmgr option repository \
-              https://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2024/tlnet-final && \
-          tlmgr install --usermode esvect dvisvgm && \
+            https://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2024/tlnet-final
+          tlmgr install --usermode esvect dvisvgm
           make4ht -u -f html5+svg -d out 00-main.tex
-          ls -R out || true        # don't fail the workflow, just show us
+          ls -R out || true
           du -sh out || true
 
-    #---------------------------------------------------------------
-    # 3. publish the `out/` directory to the gh-pages branch
-    #---------------------------------------------------------------
-    - name: Publish to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: out
+      - name: Publish to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./out
