--- a/.github/workflows/split.cfg
+++ b/.github/workflows/split.cfg
@@ -1,7 +1,33 @@
-% split.cfg  –– tell TeX4ht where to “cut” the HTML
-\Preamble{html5}
-  % create a new HTML file each time we enter a \subsection
-  \Configure{cut-at}{subsection}
+\Preamble{html5,charset=utf-8}
+
+% ─── 1. Tell tex4ht where to cut the document ────────────────────────────────
+% One \Configure{CutAt} per level you want as a separate page:
+\Configure{CutAt}{part}
+\Configure{CutAt}{section}
+\Configure{CutAt}{subsection}
+
+% ─── 2. Add navigation links (Prev / Next) at bottom of every page ──────────
+% 4-argument form:  before-links | Prev | Next | after-links
+\Configure{crosslinks}
+  {% before
+    \ifvmode\IgnorePar\fi\EndP
+    \HCode{<nav class="nav-prevnext">}%
+  }
+  {% Prev  (use \PrevHref, \PrevTitle provided by tex4ht)
+    \ifx\PrevHref\empty
+       % nothing – we are on the first page
+    \else
+       \HCode{<a rel="prev" href="\PrevHref">&#x25C0; Prev</a>}%
+    \fi
+  }
+  {% Next  (use \NextHref, \NextTitle)
+    \ifx\NextHref\empty
+    \else
+       \HCode{<a rel="next" href="\NextHref">Next &#x25B6;</a>}%
+    \fi
+  }
+  {% after
+    \HCode{</nav>}%
+  }
+
 \EndPreamble
-\begin{document}
-\EndDocument
