--- a/.github/workflows/split.cfg
+++ b/.github/workflows/split.cfg
@@ -6,27 +6,30 @@
 \Configure{CutAt}{section}
 \Configure{CutAt}{subsection}
 
-% ─── 2. Add navigation links (Prev / Next) at bottom of every page ──────────
-% 4-argument form:  before-links | Prev | Next | after-links
-\Configure{crosslinks}
-  {% before
+\Configure{crosslinks+}
+  {%
     \ifvmode\IgnorePar\fi\EndP
     \HCode{<nav class="nav-prevnext">}%
   }
-  {% Prev  (use \PrevHref, \PrevTitle provided by tex4ht)
+  {% ─── Prev ───
     \ifx\PrevHref\empty
-       % nothing – we are on the first page
     \else
-       \HCode{<a rel="prev" href="\PrevHref">&#x25C0; Prev</a>}%
+      \HCode{<a rel="prev" href="\PrevHref">&#x25C0; Prev</a>}%
     \fi
   }
-  {% Next  (use \NextHref, \NextTitle)
+  {% ─── Up (parent) ───
+    \ifx\UpHref\empty
+    \else
+      \HCode{<a rel="up"  href="\UpHref">Up ▲</a>}%
+    \fi
+  }
+  {% ─── Next ───
     \ifx\NextHref\empty
     \else
-       \HCode{<a rel="next" href="\NextHref">Next &#x25B6;</a>}%
+      \HCode{<a rel="next" href="\NextHref">Next &#x25B6;</a>}%
     \fi
   }
-  {% after
+  {%
     \HCode{</nav>}%
   }
 
