--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
           tlmgr init-usertree
           tlmgr option repository \
             https://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2024/tlnet-final
-          tlmgr install --usermode esvect dvisvgm
+          tlmgr install --usermode esvect
+          tlmgr install dvisvgm
           make4ht -u -f html5+svg -d out -jobname=index 00-main.tex
           ls -R out || true
           du -sh out || true
