--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           tlmgr option repository \
             https://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2024/tlnet-final
           tlmgr install --usermode esvect
-          make4ht -u -f html5+mathjax -c split.cfg -d out -j index 00-main.tex
+          make4ht -u -f html5+mathjax -c .github/workflows/split.cfg -d out -j index 00-main.tex
           ls -R out || true
           du -sh out || true
 
