--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,21 +15,23 @@ jobs:
 
       - name: Build HTML with make4ht
         shell: bash          # so the pipes and back-slashes work
-        run: |
-          set -e
-          apt-get update -qq
-          apt-get install -y --no-install-recommends \
-            wget curl libnet-ssleay-perl libio-socket-ssl-perl \
-            xz-utils ghostscript imagemagick
-          wget -qO- http://mirror.ctan.org/systems/texlive/tlnet/update-tlmgr-latest.sh | sh - -- --update
-          tlmgr init-usertree
-          tlmgr update --self --all
-          tlmgr option repository \
-            https://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2024/tlnet-final
-          tlmgr install --usermode esvect
-          make4ht -u -f html5+mathjax -c .github/workflows/split.cfg -d out -j index 00-main.tex
-          ls -R out || true
-          du -sh out || true
+run: |
+  set -e
+  apt-get update -qq
+  apt-get install -y --no-install-recommends \
+      wget curl libnet-ssleay-perl libio-socket-ssl-perl \
+      xz-utils ghostscript imagemagick
+
+  # download and run the TeX Live upgrader *on the same line*
+  wget -qO- \
+    http://mirror.ctan.org/systems/texlive/tlnet/update-tlmgr-latest.sh \
+    | sh - -- --update
+
+  tlmgr option repository \
+    https://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2024/tlnet-final
+  tlmgr install esvect
+  make4ht -u -f html5+mathjax -c .github/workflows/split.cfg \
+          -d out -jobname index 00-main.tex
 
       - name: Publish to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
