--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,8 @@ jobs:
          apt-get install -y --no-install-recommends \
          wget curl libnet-ssleay-perl libio-socket-ssl-perl \
          xz-utils ghostscript imagemagick
-         wget -qO- http://mirror.ctan.org/systems/texlive/tlnet/update-tlmgr-latest.sh | sh - -- --update
+         curl -L -o /tmp/update-tlmgr.sh https://mirror.ctan.org/systems/texlive/tlnet/update-tlmgr-latest.sh
+         sh /tmp/update-tlmgr.sh -- --update
          tlmgr option repository https://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2024/tlnet-final
          tlmgr install esvect
          make4ht -u -f html5+mathjax -c .github/workflows/split.cfg -d out -jobname index 00-main.tex
