--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,7 @@ jobs:
          apt-get update -qq
          apt-get install -y --no-install-recommends \
          wget curl libnet-ssleay-perl libio-socket-ssl-perl \
-         xz-utils ghostscript imagemagick
-         curl -L -o /tmp/update-tlmgr.sh https://mirror.ctan.org/systems/texlive/tlnet/update-tlmgr-latest.sh
-         sh /tmp/update-tlmgr.sh -- --update
+         xz-utils ghostscript imagemagick texlive-fonts-extra
          tlmgr option repository https://ftp.math.utah.edu/pub/tex/historic/systems/texlive/2024/tlnet-final
          tlmgr install esvect
          make4ht -u -f html5+mathjax -c .github/workflows/split.cfg -d out -jobname index 00-main.tex
