--- a/.github/workflows/split.cfg
+++ b/.github/workflows/split.cfg
@@ -6,6 +6,10 @@
 \Configure{CutAt}{section}
 \Configure{CutAt}{subsection}
 
+\Configure{graphics*}{svg}{%
+  width="\Gin@req@width"%
+}
+
 \Configure{crosslinks+}
   {%
     \ifvmode\IgnorePar\fi\EndP
