--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -1,6 +1,41 @@
 \Preamble{xhtml,mathjax,mathml}
 %\Configure{MathJaxMacros}{mymacros.tex} 
-\Configure{Gin-dim}{} 
+\Configure{CutAt}{part}
+\Configure{CutAt}{section}
+\Configure{CutAt}{subsection}
+
+\Configure{graphics*}{svg}{%
+  width="\Gin@req@width"%
+}
+
+\Configure{crosslinks+}
+  {%
+    \ifvmode\IgnorePar\fi\EndP
+    \HCode{<nav class="nav-prevnext">}%
+  }
+  {% ─── Prev ───
+    \ifx\PrevHref\empty
+    \else
+      \HCode{<a rel="prev" href="\PrevHref">&#x25C0; Prev</a>}%
+    \fi
+  }
+  {% ─── Up (parent) ───
+    \ifx\UpHref\empty
+    \else
+      \HCode{<a rel="up"  href="\UpHref">Up ▲</a>}%
+    \fi
+  }
+  {% ─── Next ───
+    \ifx\NextHref\empty
+    \else
+      \HCode{<a rel="next" href="\NextHref">Next &#x25B6;</a>}%
+    \fi
+  }
+  {%
+    \HCode{</nav>}%
+  }
+
+%\Configure{Gin-dim}{} 
 \Css{img { 
     max-width: 100\%; 
     height: auto; 
