--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -1,31 +1,66 @@
 \Preamble{xhtml,mathjax,mathml}
-%\Configure{MathJaxMacros}{mymacros.tex} 
+
+% --------------------------------------------------------------------------
+% 1 · visual style –– make the page bright again
+% --------------------------------------------------------------------------
+\Css{
+  /* global colours */
+  body  { background:#ffffff; color:#000000; margin:1em auto; max-width:52em; }
+  a     { color:#0645ad; }                         /* GitHub-like link blue   */
+  nav.crosslinks { font-size:.9em; text-align:center; margin:1em 0; }
+  nav.crosslinks a { margin:0 .5em; text-decoration:none; }
+}
+
+% --------------------------------------------------------------------------
+% 2 · tell TeX4ht *where* to cut the document
+% --------------------------------------------------------------------------
 \Configure{CutAt}{part}
 \Configure{CutAt}{section}
 \Configure{CutAt}{subsection}
 
-\Configure{graphics*}{svg}{%
-  width="\Gin@req@width"%
-}
+% If you prefer to limit the depth (e.g. only part&section) just remove the
+% {subsection} line above.
 
+% --------------------------------------------------------------------------
+% 3 · simple “Prev • Up • Next” navigation  -------------------------------
+% --------------------------------------------------------------------------
+\catcode`\:=11    % allow @ in control-sequence names
 
+% open and close the wrapper <nav class="crosslinks"> … </nav>
+\Configure{CrossLinks}
+  {\ifvmode\IgnorePar\fi \EndP
+   \HCode{<nav class="crosslinks">}}
+  {\HCode{</nav>}}
 
-\Configure{Gin-dim}{} 
-\Css{img { 
-    max-width: 100\%; 
-    height: auto; 
-}}
+% individual link templates
+\Configure{PrevLink}{\Link[rel="prev"]{}{}}{\EndLink}
+\Configure{NextLink}{\Link[rel="next"]{}{}}{\EndLink}
+\Configure{UpLink}  {\Link[rel="up"]  {}}{\EndLink}
+
+% separator between the three links
+\Configure{BetweenLinks}{\HCode{ &bull; }}
+
+% optional line above and below the navigation bar
+\Configure{PrevNextBorder}{\HCode{<hr/>}}
+
+\catcode`\:=12    % restore normal catcode for @
+
+% --------------------------------------------------------------------------
+% 4 · your existing picture and math tweaks (unchanged)
+% --------------------------------------------------------------------------
+\Configure{graphics*}{svg}{width="\Gin@req@width"}
+\Configure{Gin-dim}{}
+
+% fixed bold-math bug (can be removed once TeX Live ships the patch)
 \catcode`\:=11
-% this configuration is needed for \bm{x}^{foo}
-% I've fixed it in TeX4ht sources, so it can be removed once the fix is in distros
 \Configure{bm}
-  {\bgroup\ifmmode \ifmtext \else
-     \Tg<\a:mathml mstyle
-             mathvariant="bold">%
-     \expandafter\expandafter\expandafter\:gobble
+  {\bgroup\ifmmode\ifmtext\else
+     \Tg<\a:mathml mstyle mathvariant="bold">%
+     \expandafter\:gobble
    \fi\fi}
-  {\ifmmode \ifmtext \else \Tg</\a:mathml mstyle>\fi\fi\egroup}
+  {\ifmmode\ifmtext\else\Tg</\a:mathml mstyle>\fi\fi\egroup}
 \renewcommand\mymathcolor[2]{\HCode{<mstyle mathcolor="#1">}#2\HCode{</mstyle>}}
 \catcode`\:=12
+
 \begin{document}
 \EndPreamble
