--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -13,8 +13,7 @@
 \Configure{Gin-dim}{} 
 \Css{img { 
     max-width: 100\%; 
-    height: auto;
-    body { background:#ffffff !important; color:#000000 !important; }
+    height: auto
 }}
 \catcode\:=11
 % this configuration is needed for \bm{x}^{foo}
