--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -1,21 +1,11 @@
 \Preamble{xhtml,mathjax,mathml}
 %\Configure{MathJaxMacros}{mymacros.tex} 
-\Configure{CutAt}{part}
-\Configure{CutAt}{section}
-\Configure{CutAt}{subsection}
-
-\Configure{graphics*}{svg}{%
-  width="\Gin@req@width"%
-}
-
-
-
 \Configure{Gin-dim}{} 
 \Css{img { 
     max-width: 100\%; 
-    height: auto
+    height: auto; 
 }}
-\catcode\:=11
+\catcode`\:=11
 % this configuration is needed for \bm{x}^{foo}
 % I've fixed it in TeX4ht sources, so it can be removed once the fix is in distros
 \Configure{bm}
@@ -26,6 +16,6 @@
    \fi\fi}
   {\ifmmode \ifmtext \else \Tg</\a:mathml mstyle>\fi\fi\egroup}
 \renewcommand\mymathcolor[2]{\HCode{<mstyle mathcolor="#1">}#2\HCode{</mstyle>}}
-\catcode\:=12
+\catcode`\:=12
 \begin{document}
-\EndPreamble 
+\EndPreamble
