--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -4,6 +4,7 @@
 \Css{img { 
     max-width: 100\%; 
     height: auto; 
+    body { background:#FFF6E5; color:#000;  }
 }}
 \catcode`\:=11
 % this configuration is needed for \bm{x}^{foo}
