--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -3,9 +3,12 @@
 \Configure{Gin-dim}{} 
 \Css{img { 
     max-width: 100\%; 
-    height: auto; 
-    body { background:#FFF6E5; color:#000;  }
+    height: auto;
 }}
+\Css{
+  body { background:#FFF6E5 !important; color:#000000 !important; }
+}
+
 \catcode`\:=11
 % this configuration is needed for \bm{x}^{foo}
 % I've fixed it in TeX4ht sources, so it can be removed once the fix is in distros
