--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -1,5 +1,16 @@
-\Preamble{xhtml,mathjax,mathml}
-%\Configure{MathJaxMacros}{mymacros.tex} 
+% "sec-filename" option will base filename for each section on the section title
+ % "3" option will create separater file for each sectioning type until subsection
+ %
+\Preamble{xhtml,mathjax,mathml,3,sec-filename}
+
+\Css{
+   /* global colours */
+   body  { background:\#ffffff; color:\#000000; margin:1em auto; max-width:52em; colorscheme: light; }
+   a     { color:\#0645ad; }                         /* GitHub-like link blue   */
+   nav.crosslinks { font-size:.9em; text-align:center; margin:1em 0; }
+   nav.crosslinks a { margin:0 .5em; text-decoration:none; }
+ }
+ 
 \Configure{Gin-dim}{} 
 \Css{img { 
     max-width: 100\%; 
