--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -1,22 +1,21 @@
 % "sec-filename" option will base filename for each section on the section title
- % "3" option will create separater file for each sectioning type until subsection
- %
+% "3" option will create separater file for each sectioning type until subsection
+%
 \Preamble{xhtml,mathjax,mathml,3,sec-filename}
-
+%\Configure{MathJaxMacros}{mymacros.tex} 
 \Css{
-   /* global colours */
-   body  { background:\#ffffff; color:\#000000; margin:1em auto; max-width:52em; colorscheme: light; }
-   a     { color:\#0645ad; }                         /* GitHub-like link blue   */
-   nav.crosslinks { font-size:.9em; text-align:center; margin:1em 0; }
-   nav.crosslinks a { margin:0 .5em; text-decoration:none; }
- }
- 
+  /* global colours */
+  body  { background:\#ffffff; color:\#000000; margin:1em auto; max-width:52em; colorscheme: light; }
+  a     { color:\#0645ad; }                         /* GitHub-like link blue   */
+  nav.crosslinks { font-size:.9em; text-align:center; margin:1em 0; }
+  nav.crosslinks a { margin:0 .5em; text-decoration:none; }
+}
+
 \Configure{Gin-dim}{} 
 \Css{img { 
     max-width: 100\%; 
-    height: auto;
+    height: auto; 
 }}
-
 \catcode`\:=11
 % this configuration is needed for \bm{x}^{foo}
 % I've fixed it in TeX4ht sources, so it can be removed once the fix is in distros
