--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -10,7 +10,7 @@
   nav.crosslinks { font-size:.9em; text-align:center; margin:1em 0; }
   nav.crosslinks a { margin:0 .5em; text-decoration:none; }
 }
-
+\Configure{Ref*}{\getrefnumber{#1}}{}  % before, after
 \Configure{Gin-dim}{} 
 \Css{img { 
     max-width: 100\%; 
