--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -10,7 +10,20 @@
   nav.crosslinks { font-size:.9em; text-align:center; margin:1em 0; }
   nav.crosslinks a { margin:0 .5em; text-decoration:none; }
 }
-\Configure{Ref*}{\getrefnumber{#1}}{}  % before, after
+
+% fix page width - the problem is that you have lot of long tables and math, which breaks
+% the layout, so this should make everything wider, but paragraphs should be a bit shorter, for better readability
+% adjust the max-width to your liking
+\Css{
+body{ margin:1em auto; max-width:160ch; padding:0 .62em; }
+p {max-width: 100ch}
+}
+
+% this should fix the top hline in tables
+\Configure{Adjustbox}{}{}
+\Css{.hline:first-child{border-bottom:1px solid black;border-top:none;}}
+
+
 \Configure{Gin-dim}{} 
 \Css{img { 
     max-width: 100\%; 
@@ -26,7 +39,41 @@
      \expandafter\expandafter\expandafter\:gobble
    \fi\fi}
   {\ifmmode \ifmtext \else \Tg</\a:mathml mstyle>\fi\fi\egroup}
-\renewcommand\mymathcolor[2]{\HCode{<mstyle mathcolor="#1">}#2\HCode{</mstyle>}}
+\renewcommand\mymathcolor[2]{{\HCode{<mstyle mathcolor="#1">}#2\HCode{</mstyle>}}}
+\def\mathcolor{\mymathcolor}
+
+\Configure{textcolor}
+   {\ifmathml
+       \Configure{color}%
+         {\Configure{SetHColor}
+              {\ifmtext\ht:special{t4ht@,}%
+\fi\HCode{<\a:mathml mstyle mathcolor="\HColor">}}}%
+    \else
+       \gHAdvance\textcolorN by 1
+       \Configure{color}%
+         {\Configure{SetHColor}
+              {\Css{\#textcolor\textcolorN{color:\HColor}}}}%
+       \HCode{<span id="textcolor\textcolorN">}%
+    \fi
+   }%
+   {\HCode{</\ifmathml\a:mathml  mstyle\else span\fi>}\ifmtext\ht:special{t4ht@,&\#x00A0;}%
+\fi}
+
+% fix for issue no 6
+% this should fix \sin command in \caption
+% you may need to add more commands
+\DeclareRobustCommand\sin{\n:sin:}
+
+
 \catcode`\:=12
+\makeatletter
+% fix for \rule command
+\long\def\@rule[#1]#2#3{\ifvmode\IgnorePar\fi\EndP\HCode{<hr />}}
+\Css{hr { border: none; height: 1px; background-color: \#000000; } }
+% fix for \rotatebox command
+\renewcommand\rotatecharone[1]{\ifmtext\special{t4ht@,}\fi\HCode{<mtext style="transform:rotate(-180deg)">}#1\HCode{</mtext>}\ifmtext\special{t4ht@,&\#x00A0;}\fi}
+% fix for \textsubscript command
+\Configure{textsubscript}{\ifmathml\HCode{<msub><mrow></mrow><mtext>}\else\HCode{<sub>}\fi}{\ifmathml\HCode{</mtext></msub>}\else\HCode{</sub>}\fi}
+\makeatother
 \begin{document}
 \EndPreamble
