--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -1,6 +1,5 @@
 % "sec-filename" option will base filename for each section on the section title
 % "3" option will create separater file for each sectioning type until subsection
-%
 \Preamble{xhtml,mathjax,mathml,3,sec-filename}
 %\Configure{MathJaxMacros}{mymacros.tex} 
 \Css{
@@ -14,10 +13,12 @@
 % fix page width - the problem is that you have lot of long tables and math, which breaks
 % the layout, so this should make everything wider, but paragraphs should be a bit shorter, for better readability
 % adjust the max-width to your liking
-\Css{
-body{ margin:1em auto; max-width:160ch; padding:0 .62em; }
-p {max-width: 100ch}
-}
+\Css{body{ margin:1em auto; max-width:160ch; padding:0 .62em; }}
+% fix width of paragraphs and other block level elements that could be too wide. feel free to add others
+\Css{p,li,h1,h2,h3,h4,h5, .abstract {max-width: 100ch}}
+% fix for the ul bullet points position
+\Css{ul{padding-left: 0;}}
+\Css{ul li{margin-left: 1rem;}}
 
 % this should fix the top hline in tables
 \Configure{Adjustbox}{}{}
@@ -29,7 +30,17 @@ p {max-width: 100ch}
     max-width: 100\%; 
     height: auto; 
 }}
+
+% remove links for \ref* 
+\ExplSyntaxOn
+\def\::sref#1{{\:SUBOff\:SUPOff\xdef\RefArg{#1}%
+  \SUBOn\SUPOn%
+  \def\rEfLiNK##1##2{\tl_rescan:nn{}{##2}}%
+  \expandafter\o:ref\expandafter{\RefArg}%
+}}
+\ExplSyntaxOff
 \catcode`\:=11
+\DeclareDocumentCommand\:ref{s}{\IfBooleanTF{#1}{\Protect\::sref}{\Protect\::ref}}
 % this configuration is needed for \bm{x}^{foo}
 % I've fixed it in TeX4ht sources, so it can be removed once the fix is in distros
 \Configure{bm}
@@ -40,14 +51,14 @@ p {max-width: 100ch}
    \fi\fi}
   {\ifmmode \ifmtext \else \Tg</\a:mathml mstyle>\fi\fi\egroup}
 \renewcommand\mymathcolor[2]{{\HCode{<mstyle mathcolor="#1">}#2\HCode{</mstyle>}}}
-\def\mathcolor{\mymathcolor}
+\def\mathcolor{\textcolor}
 
 \Configure{textcolor}
    {\ifmathml
        \Configure{color}%
          {\Configure{SetHColor}
               {\ifmtext\ht:special{t4ht@,}%
-\fi\HCode{<\a:mathml mstyle mathcolor="\HColor">}}}%
+\fi\HCode{<\a:mathml mstyle style="color:\HColor">}}}%
     \else
        \gHAdvance\textcolorN by 1
        \Configure{color}%
@@ -64,6 +75,10 @@ p {max-width: 100ch}
 % you may need to add more commands
 \DeclareRobustCommand\sin{\n:sin:}
 
+% set spacing for subssectionTOC
+% fix issue no 12
+\Css{.subsectionTOCS { margin: 2em 0; } }
+
 
 \catcode`\:=12
 \makeatletter
@@ -73,7 +88,7 @@ p {max-width: 100ch}
 % fix for \rotatebox command
 \renewcommand\rotatecharone[1]{\ifmtext\special{t4ht@,}\fi\HCode{<mtext style="transform:rotate(-180deg)">}#1\HCode{</mtext>}\ifmtext\special{t4ht@,&\#x00A0;}\fi}
 % fix for \textsubscript command
-\Configure{textsubscript}{\ifmathml\HCode{<msub><mrow></mrow><mtext>}\else\HCode{<sub>}\fi}{\ifmathml\HCode{</mtext></msub>}\else\HCode{</sub>}\fi}
+\Configure{textsubscript}{\ifmathml\HCode{<msub><mrow></mrow><mrow>}\ifmtext\HCode{<mtext>}\fi\else\HCode{<sub>}\fi}{\ifmathml\ifmtext\HCode{</mtext>}\fi\HCode{</mrow></msub>}\else\HCode{</sub>}\fi}
 \makeatother
 \begin{document}
 \EndPreamble
