--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -13,12 +13,19 @@
 % fix page width - the problem is that you have lot of long tables and math, which breaks
 % the layout, so this should make everything wider, but paragraphs should be a bit shorter, for better readability
 % adjust the max-width to your liking
-\Css{body{ margin:1em auto; max-width:160ch; padding:0 .62em; }}
+%\Css{body{ margin:1em auto; max-width:160ch; padding:0 .62em; }}
+% I've changed the page width to 100ch, but it may cause problems with large tables or images. in that case, you can
+% revert to the original version above
+\Css{body{ margin:1em auto; max-width:100ch; padding:0 .62em; }}
+
 % fix width of paragraphs and other block level elements that could be too wide. feel free to add others
-\Css{p,li,h1,h2,h3,h4,h5, .abstract {max-width: 100ch}}
+\Css{p,li,h1,h2,h3,h4,h5, .abstract, dd, .tcolorbox {max-width: 100ch}}
+\Css{table,math{overflow-x:auto; }}
 % fix for the ul bullet points position
 \Css{ul{padding-left: 0;}}
 \Css{ul li{margin-left: 1rem;}}
+\Css{ol{padding-left:0;}}
+\Css{ol li{margin-left:1rem;}}
 
 % this should fix the top hline in tables
 \Configure{Adjustbox}{}{}
@@ -78,6 +85,28 @@
 % set spacing for subssectionTOC
 % fix issue no 12
 \Css{.subsectionTOCS { margin: 2em 0; } }
+
+% this should fix DOM parsing errors after section TOCs
+\Configure{TocAt*}
+   {\let\sv:atoc\a:tableofcontents
+\let\sv:btoc\b:tableofcontents
+\let\sv:ctoc\c:tableofcontents
+\let\sv:dtoc\d:tableofcontents
+\let\sv:etoc\e:tableofcontents
+%
+    \Configure{tableofcontents}
+       {\ifvmode\IgnorePar\fi\EndP\HCode{<div class="\sec:typ TOCS hrr">}}
+       {}{\ifvmode\IgnorePar\fi\EndP\HCode{</div>}\par\HCode{}\ShowPar}{\HCode{<br />}}{}%
+    %\ifvmode \IgnorePar\fi \EndP
+%    \SaveEndP
+   }
+   {\let\a:tableofcontents\sv:atoc
+\let\b:tableofcontents\sv:btoc
+\let\c:tableofcontents\sv:ctoc
+\let\d:tableofcontents\sv:dtoc
+\let\e:tableofcontents\sv:etoc
+\par\ShowPar
+}
 
 
 \catcode`\:=12
