Updates from Overleaf

--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -45,6 +45,8 @@
   \def\rEfLiNK##1##2{\tl_rescan:nn{}{##2}}%
   \expandafter\o:ref\expandafter{\RefArg}%
 }}
+
+
 \ExplSyntaxOff
 \catcode`\:=11
 \DeclareDocumentCommand\:ref{s}{\IfBooleanTF{#1}{\Protect\::sref}{\Protect\::ref}}
@@ -108,9 +110,37 @@
 \par\ShowPar
 }
 
+\makeatletter
+% this should fix matrices, the problem is with the arydshln package
+\def\:tempa{\cr}
+\HLet\adl@cr\:tempa
+
+% fix for accents
+% note that this will broke support for these accents in text
+% redefine macro from unicode.4ht to produce better accents
+\def\unicode:mathop#1{\PauseMathClass\HCode{<\a:mathml mo accent="true" stretchy="\stretchy:op">}#1\HCode{</\a:mathml mo>}\EndPauseMathClass}
+\def\stretchy:op{false}
+  \Configure{accent}\widetilde\widetilde{{}{}}
+  {}
+  {\HCode{<\a:mathml mover\Hnewline accent="true"><\a:mathml mrow\Hnewline>}#2\HCode{</\a:mathml mrow>}%
+    \def\stretchy:op{false}\:widetilde:over  \HCode{</\a:mathml mover>}}
+  % this configuration caused problems with text accents.
+  % we can use Unicode characters with tilde accents instead even in MathML
+  % \Configure{accent}\tilde\tilde{{}{}}
+  % {}
+  % {\HCode{<\a:mathml mover\Hnewline accent="true"><\a:mathml mrow\Hnewline>}#2\HCode{</\a:mathml mrow>}%
+  %   \:tilde:over  \HCode{</\a:mathml mover>}}
+  \Configure{accent}\widehat\widehat{{}{}}
+  {}
+  {\HCode{<\a:mathml mover\Hnewline accent="true"><\a:mathml mrow\Hnewline>}#2\HCode{</\a:mathml mrow>}%
+   \def\stretchy:op{true} \:widehat:over  \HCode{</\a:mathml mover>}}
+\Configure{accent}\hat\hat{{}{}}
+  {}
+  {\HCode{<\a:mathml mover\Hnewline accent="true"><\a:mathml mrow\Hnewline>}#2\HCode{</\a:mathml mrow>}%
+    % change \stretchy:op to true if you want wide hat, but the original accent should look more like \hat{A} than \hat{B} in your example
+    \def\stretchy:op{false}\:hat:over  \HCode{</\a:mathml mover>}}
 
 \catcode`\:=12
-\makeatletter
 % fix for \rule command
 \long\def\@rule[#1]#2#3{\ifvmode\IgnorePar\fi\EndP\HCode{<hr />}}
 \Css{hr { border: none; height: 1px; background-color: \#000000; } }
