--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -4,7 +4,7 @@
 %\Configure{MathJaxMacros}{mymacros.tex} 
 \Css{
   /* global colours */
-  body  { background:\#ffffff; color:\#000000; margin:1em auto; max-width:52em; colorscheme: light; }
+  body  { background:\#ffffff; color:\#000000; margin:1em auto; max-width:52em; colorscheme: light; font-family: STIXGeneral, STIX, Superclarendon, 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif; }
   a     { color:\#0645ad; }                         /* GitHub-like link blue   */
   nav.crosslinks { font-size:.9em; text-align:center; margin:1em 0; }
   nav.crosslinks a { margin:0 .5em; text-decoration:none; }
@@ -26,6 +26,19 @@
 \Css{ul li{margin-left: 1rem;}}
 \Css{ol{padding-left:0;}}
 \Css{ol li{margin-left:1rem;}}
+
+% text of crosslinks
+% #1  left delimiter
+% #2  right delimiter
+% #3  next
+% #4  previous
+% #5  previous-tail
+% #6  front
+% #7  tail
+% #8  up
+\Configure{crosslinks}{[}{]}{next}{prev}{}{}{}{parent}
+\Configure{crosslinks*}{prev}{up}{next}{}
+
 
 % this should fix the top hline in tables
 \Configure{Adjustbox}{}{}
@@ -114,6 +127,13 @@
 % this should fix matrices, the problem is with the arydshln package
 \def\:tempa{\cr}
 \HLet\adl@cr\:tempa
+
+
+\DeclareRobustCommand{\hathat}[1]{% 
+\begingroup%
+\HCode{<\a:mathml mover accent="true"><\a:mathml mpadded voffset=".1em" lspace="-.15em"><\a:mathml mover accent="true"><\a:mathml mrow>}#1\HCode{</\a:mathml mrow><\a:mathml mo stretchy="false" accent="true">}\x:unicode{005E}\HCode{</\a:mathml mo></\a:mathml mover></\a:mathml mpadded><\a:mathml mo stretchy="false" accent="true">}\x:unicode{005E}\HCode{</\a:mathml mo></\a:mathml mover>}%
+\endgroup%
+}
 
 % fix for accents
 % note that this will broke support for these accents in text
