--- a/.github/workflows/config.cfg
+++ b/.github/workflows/config.cfg
@@ -4,7 +4,7 @@
 %\Configure{MathJaxMacros}{mymacros.tex} 
 \Css{
   /* global colours */
-  body  { background:\#ffffff; color:\#000000; margin:1em auto; max-width:52em; colorscheme: light; font-family: STIXGeneral, STIX, Superclarendon, 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif; }
+  body  { background:\#ffffff; color:\#000000; margin:1em auto; max-width:52em; colorscheme: light; font-family: 'Computer Modern', STIXGeneral, STIX, Superclarendon, 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif; }
   a     { color:\#0645ad; }                         /* GitHub-like link blue   */
   nav.crosslinks { font-size:.9em; text-align:center; margin:1em 0; }
   nav.crosslinks a { margin:0 .5em; text-decoration:none; }
